--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Blazing the Nets</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/logo/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/logo/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/logo/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/logo/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/logo/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/logo/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/logo/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/logo/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/logo/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/logo/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="NBA Shooting Statistics and Visualizations" />
+    <!-- Open Graph metadata -->
+    <meta property="og:site_name" content="Blazing the Nets" />
+    <meta property="og:title" content="Blazing the Nets" />
+    <meta property="og:description" content="National Basketball Association Shooting Statistics and Visualizations" />
+    <meta property="og:url" content="https://blazing-the-nets.web.app/" />
+    <meta property="og:image" content="https://blazing-the-nets.web.app/og-image.png" />
+    <meta name="twitter:site" content="@saiemgilani">
+    <meta name="twitter:creator" content="@saiemgilani">
     
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.3.1/firebase-app.js"></script>
@@ -26,14 +47,6 @@
       to avoid connecting the SDK to running emulators.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css" integrity="sha256-VbcxqgMGQYm3q8qZMd63uETHXXZkqs7ME1bEvAY1xK8=" crossorigin="anonymous" />
-    <!-- Open Graph metadata -->
-    <meta property="og:site_name" content="Blazing the Nets" />
-    <meta property="og:title" content="Blazing the Nets" />
-    <meta property="og:description" content="National Basketball Association Shooting Statistics and Visualizations" />
-    <meta property="og:url" content="https://blazing-the-nets.web.app/" />
-    <meta property="og:image" content="https://blazing-the-nets.web.app/og-image.png" />
-    <meta name="twitter:site" content="@saiemgilani">
-    <meta name="twitter:creator" content="@saiemgilani">
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
       #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
