--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blazing the Nets</title>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/nets.ico" />
     <link rel="apple-touch-icon" sizes="57x57" href="/logo/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/logo/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/logo/apple-icon-72x72.png">
@@ -25,8 +25,8 @@
     <meta property="og:site_name" content="Blazing the Nets" />
     <meta property="og:title" content="Blazing the Nets" />
     <meta property="og:description" content="National Basketball Association Shooting Statistics and Visualizations" />
-    <meta property="og:url" content="https://blazing-the-nets.web.app/" />
-    <meta property="og:image" content="https://blazing-the-nets.web.app/og-image.png" />
+    <meta property="og:url" content="https://blazingthenets.com/" />
+    <meta property="og:image" content="https://blazingthenets.com/og-image.png" />
     <meta name="twitter:site" content="@saiemgilani">
     <meta name="twitter:creator" content="@saiemgilani">
     
@@ -50,15 +50,15 @@
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
       #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
+      #message h2 { color: #181818; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
+      #message h1 { font-size: 22px; font-weight: 300; font-weight: bold; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
       #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
       #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
       #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
       #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
       @media (max-width: 600px) {
         body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
+        body { border-top: 16px solid #181818; }
       }
     </style>
   </head>
